프로젝트 대부분을 try/catch로 감쌈